# impostor-strawberry-test

./: .gitignore
Assets/: Leaf.cs  Strawberry.cs
Assets/Scenes/: SampleScene.unity  TestFixedJoints.unity
ProjectSettings/: ProjectSettings.asset
strawberry_gen/: Cargo.toml
strawberry_gen/examples/: plexus.rs  tri_mesh.rs
strawberry_gen/src/: lib.rs  main.rs  mesh_map.rs  physics.rs  plant_gen.rs  viz_app.rs
strawberry_gen/src/constraints/: edge_constraint.rs  mod.rs  plugin.rs
